# zkVM-benchmarks

./: .gitignore  .gitmodules  Cargo.toml  Makefile.toml  README.markdown  README.md  build.rs  clippy.toml  run_ceno_sorting  run_sorting  run_sp1  run_sp1_prime  run_sp1_sorting  rust-toolchain.toml  rustfmt.toml  update
ceno_emul/: Cargo.toml
ceno_emul/src/: addr.rs  elf.rs  host_utils.rs  lib.rs  platform.rs  rv32im.rs  rv32im_encode.rs  syscalls.rs  test_utils.rs  tracer.rs  vm_state.rs
ceno_emul/src/disassemble/: mod.rs
ceno_emul/src/syscalls/: keccak_permute.rs
ceno_emul/tests/: test_elf.rs  test_vm_trace.rs
ceno_emul/tests/data/: README.md  ceno_rt_alloc  ceno_rt_io  ceno_rt_mem  ceno_rt_mini  ceno_rt_panic
ceno_host/: Cargo.toml
ceno_host/src/: lib.rs
ceno_host/tests/: test_elf.rs
ceno_rt/: Cargo.toml  README.md  build.rs  ceno_link.x  memory.x  riscv32im-ceno-zkvm-elf.json
ceno_rt/.cargo/: config.toml
ceno_rt/examples/: ceno_rt_alloc.rs  ceno_rt_io.rs  ceno_rt_mem.rs  ceno_rt_mini.rs  ceno_rt_panic.rs
ceno_rt/src/: allocator.rs  io.rs  lib.rs  mmio.rs  params.rs  syscalls.rs
ceno_zkvm/: .gitignore  Cargo.toml  Makefile.toml  build.rs
ceno_zkvm/benches/: fibonacci.rs  fibonacci_witness.rs  is_prime.rs  quadratic_sorting.rs  riscv_add.rs  sorting.rs
ceno_zkvm/examples/: fibonacci.elf  fibonacci_elf.rs  riscv_add.rs  riscv_opcodes.rs
ceno_zkvm/src/: chip_handler.rs  circuit_builder.rs  e2e.rs  error.rs  expression.rs  instructions.rs  keygen.rs  lib.rs  scheme.rs  state.rs  stats.rs  structs.rs  uint.rs  utils.rs  virtual_polys.rs  witness.rs
ceno_zkvm/src/chip_handler/: general.rs  global_state.rs  memory.rs  register.rs  test.rs  utils.rs
ceno_zkvm/src/expression/: monomial.rs
ceno_zkvm/src/gadgets/: div.rs  is_lt.rs  is_zero.rs  mod.rs  signed.rs  signed_ext.rs
ceno_zkvm/src/instructions/: riscv.rs
ceno_zkvm/src/scheme/: constants.rs  mock_prover.rs  prover.rs  tests.rs  utils.rs  verifier.rs
ceno_zkvm/src/tables/: mod.rs  ops.rs  program.rs  ram.rs  range.rs
ceno_zkvm/src/uint/: arithmetic.rs  constants.rs  logic.rs  uint.rs  util.rs
examples/: Cargo.toml  README.md
examples/.cargo/: config.toml
examples/examples/: ceno_rt_alloc.rs  ceno_rt_io.rs  ceno_rt_keccak.rs  ceno_rt_mem.rs  ceno_rt_mini.rs  ceno_rt_panic.rs  hashing.rs  hints.rs  is_prime.rs  median.rs  quadratic_sorting.rs  sorting.rs
ff_ext/: Cargo.toml
ff_ext/src/: lib.rs
frontend/: Cargo.toml
frontend/examples/: fake_hash_lookup.rs  poseidon.rs  range_check.rs
frontend/src/: circuit_builder.rs  lib.rs  lookup_builder.rs  structs.rs
gkr/: Cargo.toml  Makefile.toml
gkr-graph/: Cargo.toml
gkr-graph/examples/: series_connection_alt.rs
gkr-graph/src/: circuit_builder.rs  circuit_graph_builder.rs  error.rs  lib.rs  prover.rs  structs.rs  verifier.rs
gkr/benches/: README.md  keccak256.rs
gkr/examples/: counter_in.rs  fake_hash_lookup_par.rs  keccak256.rs  series_connection.rs  wire_in_with_pad.rs
gkr/src/: circuit.rs  error.rs  lib.rs  macros.rs  prover.rs  structs.rs  test.rs  unsafe_utils.rs  utils.rs  verifier.rs
gkr/src/circuit/: circuit_layout.rs  circuit_witness.rs
gkr/src/gadgets/: keccak256.rs
gkr/src/prover/: phase1.rs  phase1_output.rs  phase2.rs  phase2_input.rs  phase2_linear.rs  test.rs
gkr/src/test/: is_zero_gadget.rs
gkr/src/verifier/: phase1.rs  phase1_output.rs  phase2.rs  phase2_input.rs  phase2_linear.rs
guest/: Cargo.toml
guest/ceno_rt/: Cargo.toml  README.md
guest/ceno_rt/src/: allocator.rs  lib.rs  params.rs
guest/examples/: Cargo.toml
guest/examples/examples/: ceno_rt_alloc.rs
is_prime/script/: Cargo.toml
mpcs/: Cargo.toml
mpcs/benches/: basecode.rs  basefold.rs  commit_open_verify.rs  commit_open_verify_basecode.rs  commit_open_verify_rs.rs  fft.rs  hashing.rs  interpolate.rs  rscode.rs  utils.rs
mpcs/src/: basefold.rs  commit.rs  lib.rs  prover.rs  structs.rs  sum_check.rs  util.rs  verifier.rs
mpcs/src/basefold/: basecode.rs  commit.rs  commit_phase.rs  encoding.rs  query.rs  query_phase.rs  structure.rs  sumcheck.rs
mpcs/src/sum_check/: classic.rs
mpcs/src/util/: arithmetic.rs  expression.rs  hash.rs  merkle_tree.rs  parallel.rs  transcript.rs
multilinear_extensions/: Cargo.toml
multilinear_extensions/benches/: eq.rs
multilinear_extensions/src/: lib.rs  mle.rs  test.rs  util.rs  virtual_poly.rs  virtual_poly_v2.rs
poseidon/: Cargo.toml
poseidon/benches/: hashing.rs
poseidon/src/: constants.rs  digest.rs  lib.rs  poseidon.rs  poseidon_goldilocks.rs  poseidon_hash.rs  poseidon_permutation.rs
simple-frontend/: Cargo.toml
simple-frontend/examples/: fake_hash_lookup.rs  poseidon.rs  range_check.rs
simple-frontend/src/: circuit_builder.rs  lib.rs  structs.rs
simple-frontend/src/circuit_builder/: base_opt.rs  derives.rs  ext_opt.rs
singer/: Cargo.toml
singer-pro/: Cargo.toml
singer-pro/examples/: simple.rs
singer-pro/src/: basic_block.rs  chips.rs  component.rs  constants.rs  error.rs  instructions.rs  lib.rs  macros.rs  scheme.rs  test.rs  utils.rs
singer-pro/src/basic_block/: bb_final.rs  bb_ret.rs  bb_start.rs  utils.rs
singer-pro/src/chips/: bytecode.rs  calldata.rs  circuit_gadgets.rs  range.rs
singer-pro/src/instructions/: add.rs  calldataload.rs  gt.rs  jump.rs  jumpi.rs  mstore.rs  ret.rs  unknown.rs
singer-pro/src/scheme/: prover.rs  verifier.rs
singer-utils/: Cargo.toml
singer-utils/src/: chip_handler.rs  chips.rs  constants.rs  error.rs  lib.rs  macros.rs  structs.rs  uint.rs
singer/benches/: add.rs
singer/examples/: add-v2-old-sc-bak.rs  add.rs  push_and_pop.rs
singer/src/: chips.rs  error.rs  instructions.rs  lib.rs  macros.rs  scheme.rs  test.rs  utils.rs
sorting/script/: Cargo.toml  output_time
sumcheck/: Cargo.toml
sumcheck/benches/: devirgo_sumcheck.rs
sumcheck/examples/: devirgo_sumcheck.rs
sumcheck/src/: lib.rs  local_thread_pool.rs  macros.rs  prover.rs  prover_v2.rs  structs.rs  test.rs  util.rs  verifier.rs
transcript/: Cargo.toml
transcript/src/: basic.rs  hasher.rs  lib.rs  statistics.rs  syncronized.rs
(+3295 files in other folders)
