[workspace]
exclude = ["examples"]
members = [
  "ceno_emul",
  "examples-builder",
  "ceno_rt",
  "mpcs",
  "multilinear_extensions",
  "sumcheck",
  "transcript",
  "ceno_zkvm",
  "poseidon",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
ark-std = "0.4"
cfg-if = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
crossbeam-channel = "0.5"
ff = "0.13"
goldilocks = { git = "https://github.com/scroll-tech/ceno-Goldilocks" }
itertools = "0.13"
paste = "1"
plonky2 = "0.2"
poseidon = { path = "./poseidon" }
pprof = { version = "0.13", features = ["flamegraph"] }
rand = "0.8"
rand_chacha = { version = "0.3", features = ["serde1"] }
rand_core = "0.6"
rand_xorshift = "0.3"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.26"
strum_macros = "0.26"
tracing = { version = "0.1", features = [
  "attributes",
] }
tracing-flame = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
