[workspace]
exclude = ["examples"]
members = [
  "ceno_emul",
  "examples-builder",
  "ceno_rt",
  "mpcs",
  "multilinear_extensions",
  "sumcheck",
  "transcript",
  "ceno_zkvm",
  "poseidon",
]
resolver = "2"

[workspace.package]
categories = ["cryptography", "zk", "blockchain", "ceno"]
edition = "2021"
keywords = ["cryptography", "zk", "blockchain", "ceno"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/scroll-tech/ceno"
version = "0.1.0"

[workspace.dependencies]
ark-std = "0.4"
cfg-if = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
crossbeam-channel = "0.5"
ff = "0.13"
goldilocks = { git = "https://github.com/scroll-tech/ceno-Goldilocks" }
itertools = "0.13"
num-derive = "0.4"
num-traits = "0.2"
paste = "1"
plonky2 = "0.2"
poseidon = { path = "./poseidon" }
pprof2 = { version = "0.13", features = ["flamegraph"] }
prettytable-rs = "^0.10"
rand = "0.8"
rand_chacha = { version = "0.3", features = ["serde1"] }
rand_core = "0.6"
rand_xorshift = "0.3"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.26"
strum_macros = "0.26"
tracing = { version = "0.1", features = [
  "attributes",
] }
tracing-forest = { version = "0.1.6" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
