[workspace]
exclude = ["ceno_rt", "examples"]
members = [
  "ceno_emul",
  "ceno_host",
  "ceno_zkvm",
  "examples-builder",
  "mpcs",
  "multilinear_extensions",
  "poseidon",
  "sumcheck",
  "transcript",
]
resolver = "2"

[workspace.package]
categories = ["cryptography", "zk", "blockchain", "ceno"]
edition = "2021"
keywords = ["cryptography", "zk", "blockchain", "ceno"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/scroll-tech/ceno"
version = "0.1.0"

[workspace.dependencies]
anyhow = { version = "1.0", default-features = false }
ark-std = "0.4"
cfg-if = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
crossbeam-channel = "0.5"
ff = "0.13"
goldilocks = { git = "https://github.com/scroll-tech/ceno-Goldilocks" }
itertools = "0.13"
num-derive = "0.4"
num-traits = "0.2"
paste = "1"
plonky2 = "0.2"
poseidon = { path = "./poseidon" }
pprof2 = { version = "0.13", features = ["flamegraph"] }
prettytable-rs = "^0.10"
proptest = "1"
rand = "0.8"
rand_chacha = { version = "0.3", features = ["serde1"] }
rand_core = "0.6"
rand_xorshift = "0.3"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.26"
strum_macros = "0.26"
tracing = { version = "0.1", features = [
  "attributes",
] }
tracing-forest = { version = "0.1.6" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.dev]
lto = "thin"
# We are running our tests with optimizations turned on to make them faster.
# Please turn optimizations off, when you want accurate stack traces for debugging.
opt-level = 2

[profile.dev.package."*"]
# Set the default for dependencies in Development mode.
opt-level = 3

[profile.release]
lto = "thin"
