[package]
edition.workspace = true
license.workspace = true
name = "ceno_emul"
version.workspace = true

[dependencies]
anyhow = { version = "1.0", default-features = false }
elf = "0.7"
itertools.workspace = true
num-derive.workspace = true
num-traits.workspace = true
strum.workspace = true
strum_macros.workspace = true
tracing.workspace = true

[dev-dependencies]
ceno-examples = { path = "../examples-builder" }

[features]
default = ["forbid_overflow"]
forbid_overflow = []
