[package]
categories.workspace = true
description = "Ceno ZKVM"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "ceno_zkvm"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
ark-std.workspace = true
ff.workspace = true
goldilocks.workspace = true
rand_chacha.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true

base64 = "0.22"
ceno_emul = { path = "../ceno_emul" }
ceno-examples = { path = "../examples-builder" }
ceno_host = { path = "../ceno_host" }

ff_ext = { path = "../ff_ext" }
mpcs = { path = "../mpcs" }
multilinear_extensions = { version = "0", path = "../multilinear_extensions" }
sumcheck = { version = "0", path = "../sumcheck" }
transcript = { path = "../transcript" }

itertools.workspace = true
num-traits.workspace = true
paste.workspace = true
prettytable-rs.workspace = true
strum.workspace = true
strum_macros.workspace = true
tracing.workspace = true
tracing-forest.workspace = true
tracing-subscriber.workspace = true


bincode = "1"
clap = { version = "4.5", features = ["derive"] }
generic_static = "0.2"
parse-size = "1.1"
rand.workspace = true
tempfile = "3.14"
thread_local = "1.1"

[dev-dependencies]
cfg-if.workspace = true
criterion.workspace = true
pprof2.workspace = true
proptest.workspace = true

[build-dependencies]
glob = "0.3"

[features]
default = ["forbid_overflow"]
flamegraph = ["pprof2/flamegraph", "pprof2/criterion"]
forbid_overflow = []

[[bench]]
harness = false
name = "riscv_add"


[[bench]]
harness = false
name = "fibonacci"

[[bench]]
harness = false
name = "fibonacci_witness"

[[bench]]
harness = false
name = "quadratic_sorting"

[[bench]]
harness = false
name = "is_prime"
