[package]
categories.workspace = true
description = "Extra functionality for the ff ((finite fields) crate"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "ff_ext"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
ff.workspace = true
goldilocks.workspace = true
poseidon.workspace = true
serde.workspace = true
