[package]
name = "gkr-graph"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std.workspace = true
ff.workspace = true
gkr = { path = "../gkr" }
goldilocks.workspace = true
itertools = "0.12.0"
multilinear_extensions = { version = "0.1.0", path = "../multilinear_extensions" }
simple-frontend = { version = "0.1.0", path = "../simple-frontend" }
sumcheck = { version = "0.1.0", path = "../sumcheck" }
transcript = { version = "0.1.0", path = "../transcript" }
