[package]
edition.workspace = true
license.workspace = true
name = "gkr"
version.workspace = true

[dependencies]
ark-std.workspace = true
ff.workspace = true
goldilocks.workspace = true

const_env = "0.1.2"
crossbeam-channel = "0.5.13"
ff_ext = { path = "../ff_ext" }
itertools = "0.12.1"
multilinear_extensions = { path = "../multilinear_extensions" }
rayon.workspace = true
serde.workspace = true
serde_json = "1.0.128"
simple-frontend = { path = "../simple-frontend" }
sumcheck = { path = "../sumcheck" }
tracing = "0.1.40"
tracing-flame = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
transcript = { path = "../transcript" }

[dev-dependencies]
cfg-if = "1.0.0"
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.13", features = ["flamegraph"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }

[features]
default = []
flamegraph = ["pprof/flamegraph", "pprof/criterion"]
non_pow2_rayon_thread = ["sumcheck/non_pow2_rayon_thread"]
parallel = []
unsafe = []

[[bench]]
harness = false
name = "keccak256"
