[package]
edition.workspace = true
license.workspace = true
name = "mpcs"
version.workspace = true

[dependencies]
aes = "0.8"
ark-std = { version = "0.4" }
bitvec = "1.0.1"
blake2 = { version = "0.10.6" }
blake2b_simd = "1.0.2"
ctr = { git = "https://github.com/RustCrypto/block-modes", rev = "78fefba" }
ff.workspace = true
ff_ext = { path = "../ff_ext" }
generic-array = { version = "0.14.7", features = ["serde"] }
goldilocks.workspace = true
halo2_curves = { git = "https://github.com/privacy-scaling-explorations/halo2curves", tag = "0.3.3", package = "halo2curves", features = [
  "derive_serde",
] }
itertools = "0.12.1"
multilinear_extensions = { path = "../multilinear_extensions" }
num-bigint = "0.4.6"
num-integer = "0.1.46"
plonky2 = "0.2.2"
poseidon.workspace = true
rand = "0.8"
rand_chacha.workspace = true
rayon = { version = "1.10.0", optional = true }
serde.workspace = true
sha3 = "0.10.8"
transcript = { path = "../transcript" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
gkr = { path = "../gkr" }
simple-frontend = { path = "../simple-frontend" }

[features]
benchmark = ["parallel"]
default = ["parallel"] # Add "sanity-check" to debug
parallel = ["dep:rayon"]
print-trace = ["ark-std/print-trace"]
sanity-check = []

[[bench]]
harness = false
name = "commit_open_verify_rs"

[[bench]]
harness = false
name = "commit_open_verify_basecode"

[[bench]]
harness = false
name = "basecode"

[[bench]]
harness = false
name = "rscode"

[[bench]]
harness = false
name = "interpolate"

[[bench]]
harness = false
name = "fft"

[[bench]]
harness = false
name = "utils"
