[package]
edition.workspace = true
license.workspace = true
name = "mpcs"
version.workspace = true

[dependencies]
aes = "0.8"
ark-std.workspace = true
bitvec = "1.0"
blake2 = "0.10"
blake2b_simd = "1.0"
ctr = "0.9"
ff.workspace = true
ff_ext = { path = "../ff_ext" }
# TODO: move to version 1, once our dependencies are updated
generic-array = { version = "0.14", features = ["serde"] }
goldilocks.workspace = true
itertools.workspace = true
multilinear_extensions = { path = "../multilinear_extensions" }
num-bigint = "0.4"
num-integer = "0.1"
plonky2.workspace = true
poseidon.workspace = true
rand.workspace = true
rand_chacha.workspace = true
rayon = { workspace = true, optional = true }
serde.workspace = true
sha3 = "0.10"
transcript = { path = "../transcript" }

[dev-dependencies]
criterion.workspace = true
gkr = { path = "../gkr" }
simple-frontend = { path = "../simple-frontend" }

[features]
benchmark = ["parallel"]
default = ["parallel"] # Add "sanity-check" to debug
parallel = ["dep:rayon"]
print-trace = ["ark-std/print-trace"]
sanity-check = []

[[bench]]
harness = false
name = "commit_open_verify_rs"

[[bench]]
harness = false
name = "commit_open_verify_basecode"

[[bench]]
harness = false
name = "basecode"

[[bench]]
harness = false
name = "rscode"

[[bench]]
harness = false
name = "interpolate"

[[bench]]
harness = false
name = "fft"

[[bench]]
harness = false
name = "utils"
