[package]
name = "multilinear_extensions"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-flame = "0.2.0"
ff_ext = { path = "../ff_ext" }
itertools = "0.12.1"
ark-std.workspace = true
ff.workspace = true
goldilocks.workspace = true
rayon.workspace = true
serde.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
log = "0.4"
env_logger = "0.7"

[features]
parallel = [ ]
