[package]
edition.workspace = true
license.workspace = true
name = "multilinear_extensions"
version.workspace = true

[dependencies]
ark-std.workspace = true
ff.workspace = true
ff_ext = { path = "../ff_ext" }
goldilocks.workspace = true
itertools = "0.12.1"
rayon.workspace = true
serde.workspace = true
tracing = "0.1.40"
tracing-flame = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
env_logger = "0.7"
log = "0.4"

[features]
parallel = []
