[package]
edition.workspace = true
license.workspace = true
name = "multilinear_extensions"
version.workspace = true

[dependencies]
ark-std.workspace = true
ff.workspace = true
ff_ext = { path = "../ff_ext" }
goldilocks.workspace = true
itertools.workspace = true
rayon.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-flame.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
criterion.workspace = true
env_logger = "0.11"
log = "0.4"

[features]
parallel = []
