[package]
edition.workspace = true
license.workspace = true
name = "poseidon"
version.workspace = true

[dependencies]
criterion.workspace = true
ff.workspace = true
goldilocks.workspace = true
serde.workspace = true
unroll = "0.1.5"

[dev-dependencies]
ark-std.workspace = true
plonky2 = "0.2.2"
rand = "0.8.5"

[[bench]]
harness = false
name = "hashing"
