[package]
categories.workspace = true
description = "Poseidon hash function"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "poseidon"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
criterion.workspace = true
ff.workspace = true
goldilocks.workspace = true
serde.workspace = true
unroll = "0.1"

[dev-dependencies]
ark-std.workspace = true
plonky2.workspace = true
rand.workspace = true

[[bench]]
harness = false
name = "hashing"
