
[package]
edition.workspace = true
license.workspace = true
name = "simple-frontend"
version.workspace = true

[dependencies]
ark-std.workspace = true
ff.workspace = true
ff_ext = { path = "../ff_ext" }
goldilocks.workspace = true
itertools.workspace = true
rayon.workspace = true
serde.workspace = true
