[package]
name = "singer-pro"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std.workspace = true
ff.workspace = true
gkr = { version = "0.1.0", path = "../gkr", features = ["parallel"] }
gkr-graph = { version = "0.1.0", path = "../gkr-graph" }
goldilocks.workspace = true
itertools = "0.12.0"
paste = "1.0.14"
rayon.workspace = true
serde.workspace = true
simple-frontend = { version = "0.1.0", path = "../simple-frontend" }
singer-utils = { version = "0.1.0", path = "../singer-utils" }
strum = "0.25.0"
strum_macros = "0.25.3"
transcript = { version = "0.1.0", path = "../transcript" }
ff_ext = { path = "../ff_ext" }

[features]
debug_wenqing = []
