[package]
name = "singer-utils"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std.workspace = true
ff_ext = { path = "../ff_ext" }
ff.workspace = true
goldilocks.workspace = true

gkr = { path = "../gkr", features = ["parallel"] }
itertools = "0.12.0"
simple-frontend = { version = "0.1.0", path = "../simple-frontend" }
gkr-graph = { version = "0.1.0", path = "../gkr-graph" }
sumcheck = { version = "0.1.0", path = "../sumcheck" }
strum = "0.26.1"
strum_macros = "0.26.1"
transcript = { version = "0.1.0", path = "../transcript" }
multilinear_extensions = { path = "../multilinear_extensions", features = [ "parallel"] }
