[package]
edition.workspace = true
license.workspace = true
name = "singer-utils"
version.workspace = true

[dependencies]
ark-std.workspace = true
ff.workspace = true
ff_ext = { path = "../ff_ext" }
goldilocks.workspace = true

gkr = { path = "../gkr", features = ["parallel"] }
gkr-graph = { version = "0", path = "../gkr-graph" }
itertools.workspace = true
multilinear_extensions = { path = "../multilinear_extensions", features = ["parallel"] }
simple-frontend = { version = "0", path = "../simple-frontend" }
strum.workspace = true
strum_macros.workspace = true
sumcheck = { version = "0", path = "../sumcheck" }
transcript = { version = "0", path = "../transcript" }
