[package]
edition.workspace = true
license.workspace = true
name = "sumcheck"
version.workspace = true

[dependencies]
ark-ff = "0.4.2"
ark-std.workspace = true
const_env = "0.1.2"
ff.workspace = true
ff_ext = { path = "../ff_ext" }
goldilocks.workspace = true
itertools = "0.12.1"
rayon.workspace = true
serde.workspace = true
tracing = "0.1.40"

crossbeam-channel = "0.5.13"
multilinear_extensions = { path = "../multilinear_extensions", features = ["parallel"] }
transcript = { path = "../transcript" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
pprof = { version = "0.13", features = ["flamegraph"] }

[[bench]]
harness = false
name = "devirgo_sumcheck"

[features]
non_pow2_rayon_thread = []
