[package]
edition.workspace = true
license.workspace = true
name = "sumcheck"
version.workspace = true

[dependencies]
ark-std.workspace = true
ff.workspace = true
ff_ext = { path = "../ff_ext" }
goldilocks.workspace = true
itertools.workspace = true
rayon.workspace = true
serde.workspace = true
tracing.workspace = true

crossbeam-channel.workspace = true
multilinear_extensions = { path = "../multilinear_extensions", features = ["parallel"] }
transcript = { path = "../transcript" }

[dev-dependencies]
criterion.workspace = true

[[bench]]
harness = false
name = "devirgo_sumcheck"

[features]
non_pow2_rayon_thread = []
