[package]
categories.workspace = true
description = "Sumcheck protocol implementation"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "sumcheck"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
ark-std.workspace = true
ff.workspace = true
ff_ext = { path = "../ff_ext" }
goldilocks.workspace = true
itertools.workspace = true
rayon.workspace = true
serde.workspace = true
tracing.workspace = true

crossbeam-channel.workspace = true
multilinear_extensions = { path = "../multilinear_extensions", features = ["parallel"] }
transcript = { path = "../transcript" }

[dev-dependencies]
criterion.workspace = true

[[bench]]
harness = false
name = "devirgo_sumcheck"
