[package]
edition.workspace = true
license.workspace = true
name = "transcript"
version.workspace = true

[dependencies]
ark-std.workspace = true
crossbeam-channel = "0.5.13"
ff.workspace = true
ff_ext = { path = "../ff_ext" }
goldilocks.workspace = true
halo2curves.workspace = true
poseidon.workspace = true
rayon.workspace = true
serde.workspace = true
