[package]
version = "0.1.0"
name = "sorting-script"
edition = "2021"
default-run = "sorting"

[[bin]]
name = "sorting"
path = "src/bin/main.rs"

[dependencies]
sp1-sdk = "4.0.0-rc.11"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
clap = { version = "4", features = ["derive", "env"] }

[build-dependencies]
sp1-helper = "3.0.0"
